...
    }
    
    private func setupNavigationBar() {
        view.backgroundColor = .secondary
        
        let toggleLayoutButton = UIBarButtonItem(
            title: "Change View",
            style: .plain,
            target: self,
            action: #selector(toggleLayout)
        )
        navigationItem.rightBarButtonItem = toggleLayoutButton
    }
...
        navigationItem.searchController = searchController
        navigationItem.hidesSearchBarWhenScrolling = false
        searchController.searchBar.delegate = self
        searchController.hidesNavigationBarDuringPresentation = false
        searchController.searchBar.searchTextField.placeholder = "Busca por nombre o ingrediente"
        searchController.searchBar.searchTextField.font = .bederrRegular(16)
        searchController.searchBar.searchTextField.accessibilityIdentifier = "searchBar"
        
        let textFieldPublisher = NotificationCenter.default
            .publisher(for: UITextField.textDidChangeNotification, object: searchController.searchBar.searchTextField)
            .map {
                ($0.object as? UITextField)?.text
            }
...
